add Mi Air support

--- a/data.yml
+++ b/data.yml
@@ -1,32 +1,74 @@
 # 그룹: 비슷한 의미의 단어를 그룹으로 모을 수 있습니다.
 # triggers 나 conditions의 keywords 에서 group:group_id 형태로 사용합니다.
 groups:
+  # 아이유
   iu: '아이유, 지은, 징쨩'
   birthday: '생일, 태어나다'
   when: '날짜, 날, 언제, 며칠'
-  get:
-    - 받다
-    - 얻다
-  how:
-    - 어떻게
-    - 법
+  get: '받다, 얻다'
+  how: '어떻게, 법'
+  # 방
+  home: '방, 집'
+  how_much: '얼마, 몇'
+  fine_dust: '미세, 먼지, 미세먼지'
+  # 미에어
+  mi_air: '미에어, 에어, 공청기, 공기, 청정기'
+  turbo: '터보, 최대'
+  sleep: '수면, 취침'
+  auto: '자동, 알아서'
+  level: '단계'
 
 # (옵션) 아래 키워드를 모두 만족할 때 반응합니다.
 # conditions 에서 공통의 키워드를 뽑을 때 사용합니다.
 triggers:
-  - group:iu
 
 # 키워드와 대답
 qnas:
-  - keywords: '혈액형'
+  - keywords: '아이유, 혈액형'
     answers: '아이유는 A형입니다.'
-  - keywords: '데뷔, group:when'
+  - keywords: '아이유, 데뷔, group:when'
     answers: '아이유 데뷔일은 2008년 9월 18일 입니다.'
   - keywords:
       - group:birthday
       - group:when
     answers: '아이유 생일은 1993년 5월 16일 입니다.'
-  - keywords: '사랑, group:get, group:how'
+  - keywords: '아이유, 사랑, group:how, group:get'
     answers:
       - 그건 저도 알고 싶네요...
       - 알면 내가 사랑 받았지...
+  - keywords: 'group:mi_air, group:turbo'
+    actions:
+      - device: 'mi_air'
+        action: 'be_turbo'
+    answers: '공기청정기 터보모드로 작동시켰어요.'
+  - keywords: 'group:mi_air, group:sleep'
+    actions:
+      - device: 'mi_air'
+        action: 'be_silent'
+    answers: '공기청정기 취침모드로 작동시켰어요.'
+  - keywords: 'group:mi_air, group:auto'
+    actions:
+      - device: 'mi_air'
+        action: 'be_auto'
+    answers: '공기청정기 자동모드로 작동시켰어요.'
+  - keywords: 'group:mi_air, group:level'
+    actions:
+      - device: 'mi_air'
+        action: 'be_custom'
+        params: 'number'
+    answers: '공기청정기 {} 단계로 작동시켰어요.'
+  - keywords: 'group:home, group:fine_dust'
+    actions:
+      - device: 'mi_air'
+        action: 'get_aqi'
+    answers: '현재 방 공기질은 {} 입니다.'
+  - keywords: 'group:home, 온도'
+    actions:
+      - device: 'mi_air'
+        action: 'get_temperature'
+    answers: '현재 방 온도는 {} 도 입니다.'
+  - keywords: 'group:home, 습도'
+    actions:
+      - device: 'mi_air'
+        action: 'get_humidity'
+    answers: '현재 방 습도는 {} 퍼센트 입니다.'
